--- a/boke/src/main/resources/templates/end/blog_edit.html
+++ b/boke/src/main/resources/templates/end/blog_edit.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>博客管理</title>
-    <link rel="stylesheet" href="../font-blog/css/element.css">
-    <link rel="stylesheet" href="../font-blog/css/base.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.3/static/font-blog/css/element.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.3/static/font-blog/css/base.css">
 </head>
 <body>
 <div id="wrapper" v-cloak>
@@ -40,7 +40,7 @@
             </el-switch>-->
         </el-form-item>
         <el-form-item label="博客主图" label-width="100px">
-            <el-upload action="http://localhost:81/files/upload" :on-success="fileSuccessUpload" :file-list="fileList">
+            <el-upload action="/files/upload" :on-success="fileSuccessUpload" :file-list="fileList">
                 <el-button size="small" type="primary">点击上传</el-button>
             </el-upload>
         </el-form-item>
@@ -55,11 +55,11 @@
     </div>
 </div>
 
-<script src="../font-blog/js/jquery.min.js"></script>
-<script src="../font-blog/js/vue.min.js"></script>
-<script src="../font-blog/js/element.js"></script>
-<script th:src="@{/plugins/axios/axios.js}"></script>
-<script src="../font-blog/js/tinymce/tinymce.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.3/static/font-blog/js/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.3/static/font-blog/js/vue.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.3/static/font-blog/js/element.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.2/static/plugins/axios/axios.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.3/static/font-blog/js/tinymce/tinymce.min.js"></script>
 
 
 <script>
@@ -131,7 +131,7 @@
             logout() {
                 $.get("/user/login");
                 sessionStorage.removeItem("user");
-                location.href = "/page/end/login.html";
+                location.href = "../login";
             },
             loadTable() {
                 $.get(urlBase + "/page?pageNum=" + this.pageNum + "&pageSize=" + this.pageSize + "&name=" + this.search).then(res => {
@@ -173,10 +173,17 @@
                             type: "success"
                         });
                     } else {
-                        self.$message({
-                            message: res.msg,
-                            type: "error"
-                        })
+                        if(res.code == '4399'){
+                            self.$message({
+                                message:'请重新登录',
+                                type: "error"
+                            })
+                        }else{
+                            self.$message({
+                                message:res.msg,
+                                type: "error"
+                            })
+                        }
                     }
                     location.href="blog"
                 })
@@ -198,10 +205,17 @@
                         })
                         this.loadTable();
                     } else {
-                        this.$message({
-                            message: res.msg,
-                            type: "error"
-                        })
+                        if(res.code == '4399'){
+                            this.$message({
+                                message:'请重新登录',
+                                type: "error"
+                            })
+                        }else{
+                            this.$message({
+                                message:res.msg,
+                                type: "error"
+                            })
+                        }
                     }
                 })
             }
