--- a/boke/src/main/resources/templates/end/index.html
+++ b/boke/src/main/resources/templates/end/index.html
@@ -6,8 +6,8 @@
     <meta HTTP-EQUIV="Cache-Control" CONTENT="no-cache, must-revalidate">
     <meta HTTP-EQUIV="expires" CONTENT="0">
     <title>首页</title>
-    <link rel="stylesheet" href="../../font-blog/css/element.css">
-    <link rel="stylesheet" href="../../font-blog/css/base.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.3/static/font-blog/css/element.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.3/static/font-blog/css/base.css">
     <style>
         .el-divider__text {
             background: #eee;
@@ -54,11 +54,11 @@
 
 </div>
 
-<script src="../../font-blog/js/echarts.min.js"></script>
-<script src="../../font-blog/js/china.js"></script>
-<script src="../../font-blog/js/jquery.min.js"></script>
-<script src="../../font-blog/js/vue.min.js"></script>
-<script src="../../font-blog/js/element.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.3/static/font-blog/js/echarts.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.3/static/font-blog/js/china.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.3/static/font-blog/js/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.3/static/font-blog/js/vue.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.3/static/font-blog/js/element.js"></script>
 
 
 <script>
