--- a/boke/src/main/resources/templates/archive.html
+++ b/boke/src/main/resources/templates/archive.html
@@ -97,8 +97,12 @@
     <div id="content" class="site-content" >
         <!--        <main id="main" class="main" style="background-color:#735C94;">-->
         <main id="main" class="main site-mainwzxx" style="background-color:#ABBDF4;">
+            <header class="entry-header">
+                <h1 class="entry-title">归档</h1>
+            </header>
+            <div style="height: 1px; margin-top: 20px;margin-bottom: 30px;"></div>
             <!--背景图片-->
-            <div id="arch" style="text-align: center;z-index:2;display:none;">
+            <div id="arch" style="text-align: center;z-index:2;">
                 <div class="entry-media" style="margin-bottom: 20px;text-align: center">
                     <figure style="text-align: center">
                         <a  href="/style/images/interlude14.jpg">
@@ -110,9 +114,6 @@
                     </figure>
                 </div>
             </div>
-            <header id="gd" @click="showImg('arch')" class="entry-header" round>
-                <h1 class="entry-title">归档</h1>
-            </header>
             <div id="teamnewslist">
                 <ol>
                     <span v-for="item in bokeArchive">
@@ -132,29 +133,12 @@
                     </span>
                 </ol>
             </div>
-            <div style="height: 1px; margin-top: 20px;margin-bottom: 30px; background-color: #ccc"></div>
+            <div style="height: 1px; margin-top: 20px;margin-bottom: 30px; background-color: #ccc;margin-bottom: 150px;margin-top: 50px"></div>
             <!--评论-->
         </main>
 
     </div>
     <!-- 底部栏-->
-    <div style="position: relative;z-index:5" >
-        <footer id="footer" class="footer">
-            <div class="footer-image" >
-                <picture>
-                    <source srcset="style/images/footer.webp"
-                            type="image/webp">
-                    <img loading="lazy" src="style/images/footer.png"></picture>
-            </div>
-            <div class="footer-inner"><p>博客已萌萌哒运行<span id="since"></span><span class="my-face">(●'◡'●)ﾉ♥</span></p>
-                <p>© <span itemprop="copyrightYear">2021</span> Hi, 墨白.由 <a href="https://github.com/TheBreezeOverflows/boki" target="_blank" class="external"
-                                                                            rel="nofollow">TheBreezeOverflows</a>
-                    制作.</p>
-                <p>Crafted with <i class="fas fa-heart throb" style="color:#d43f57"></i> by <span class="author"
-                                                                                                  itemprop="copyrightHolder">墨白</span>.
-                </p></div>
-        </footer>
-    </div>
 </div>
 <!--右侧长条线图片-->
 <div class="back-to-top cd-top faa-float animated cd-is-visible" style="top: -900px;"></div>
@@ -178,4 +162,21 @@
     #teamnewslist li:hover a{color: #ff5900;text-decoration:none;}
 </style>
 </body>
+<div style="position: relative;z-index:5">
+    <footer id="footer" class="footer">
+        <div class="footer-image">
+            <picture>
+                <source srcset="style/images/footer.webp"
+                        type="image/webp">
+                <img loading="lazy" src="style/images/footer.png"></picture>
+        </div>
+        <div class="footer-inner"><p>博客已萌萌哒运行<span id="since"></span><span class="my-face">(●'◡'●)ﾉ♥</span></p>
+            <p>© <span itemprop="copyrightYear">2021</span> Hi, 墨白.由
+                <a href="https://github.com/TheBreezeOverflows/boki" target="_blank"  style="color: #555;text-decoration:none;  " rel="nofollow">TheBreezeOverflows</a>
+                制作.</p>
+            <p>Crafted with <i class="fas fa-heart throb" style="color:#d43f57"></i> by <span class="author" itemprop="copyrightHolder">墨白</span>.
+                <a  href="http://www.beian.miit.gov.cn/"  target="_blank"  style="color: #555;text-decoration:none;" rel="nofollow">湘ICP备2022023542号</a>
+            </p></div>
+    </footer>
+</div>
 </html>
