--- a/boke/src/main/resources/templates/end/user.html
+++ b/boke/src/main/resources/templates/end/user.html
@@ -7,8 +7,8 @@
     <meta HTTP-EQUIV="Cache-Control" CONTENT="no-cache, must-revalidate">
     <meta HTTP-EQUIV="expires" CONTENT="0">
     <title>用户管理</title>
-    <link rel="stylesheet" href="../font-blog/css/element.css">
-    <link rel="stylesheet" href="../font-blog/css/base.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.3/static/font-blog/css/element.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.3/static/font-blog/css/base.css">
 </head>
 <body>
 <div id="wrapper" v-cloak>
@@ -101,11 +101,11 @@
     </el-dialog>
 </div>
 
-<script src="../font-blog/js/jquery.min.js"></script>
-<script src="../font-blog/js/vue.min.js"></script>
-<script src="../font-blog/js/element.js"></script>
-<script src="../font-blog/js/tinymce/tinymce.min.js"></script>
-<script th:src="@{/plugins/axios/axios.js}"></script>
+<script src="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.3/static/font-blog/js/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.3/static/font-blog/js/vue.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.3/static/font-blog/js/element.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.3/static/font-blog/js/tinymce/tinymce.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.2/static/plugins/axios/axios.min.js"></script>
 
 <script>
 
