--- a/boke/src/main/resources/templates/login.html
+++ b/boke/src/main/resources/templates/login.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>登录</title>
-    <link rel="stylesheet" href="font-blog/base.css">
-    <link rel="stylesheet" href="font-blog/element.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.3/static/font-blog/base.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.3/static/font-blog/element.css">
 </head>
-<body style="background:url(/style/images/blhx.jpg) no-repeat; background-size: cover;">
+<!--<body style="background:url(/style/images/blhx.jpg) no-repeat; background-size: cover;">-->
+<body style="background:url(https://pnglog.com/i/2022/11/10/636cb73457579.jpg) no-repeat; background-size: cover;">
 <div id="wrapper">
     <div style="width: 400px; margin: 150px auto; background-color:rgba(237,116,113,0.5); border-radius: 10px">
         <div style="width: 100%; height: 100px; font-size: 30px;line-height: 100px; text-align: center; color: #eee">欢迎登录墨白的博客系统</div>
@@ -27,12 +28,11 @@
     </div>
 </div>
 
-<script src="font-blog/js/jquery.min.js"></script>
-<script th:src="@{/plugins/vue/vue.min.js}"></script>
-<script th:src="@{/plugins/vue/vuejs-paginate.js}"></script>
-<script th:src="@{/plugins/vue/vue-select.js}"></script>
-<script th:src="@{/plugins/axios/axios.js}"></script>
-
+<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.2/static/style/js/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.2/static/plugins/vue/vue.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.2/static/plugins/vue/vuejs-paginate.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.2/static/plugins/vue/vue-select.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/TheBreezeOverflows/bokistatic@v1.2/static/plugins/axios/axios.min.js"></script>
 <script>
     //初始化验证码
     let  verifyCode;
