--- a/boke/src/main/resources/templates/search.html
+++ b/boke/src/main/resources/templates/search.html
@@ -159,7 +159,7 @@
                                          v-bind:src="'compress/'+brand.blogsarticleImage"> </a>
                                 </div>
                                 <div class="post-content-wrap">
-                                    <div class="post-datelazy">🕓发布于 {{brand.blogsarticleDate}}</div>
+                                    <div class="post-datelazy">🕓 {{brand.blogsarticleDate}}</div>
                                     <a v-bind:href="'detail?id='+brand.blogsarticleId" class="post-title">
                                         <h3>{{brand.blogsarticleHeadline}}</h3>
                                     </a>
@@ -246,11 +246,11 @@
                     <img loading="lazy" src="style/images/footer.png"></picture>
             </div>
             <div class="footer-inner"><p>博客已萌萌哒运行<span id="since"></span><span class="my-face">(●'◡'●)ﾉ♥</span></p>
-                <p>© <span itemprop="copyrightYear">2021</span> Hi, 墨白.由 <a href="https://github.com/TheBreezeOverflows/boki" target="_blank" class="external"
-                                                                            rel="nofollow">TheBreezeOverflows</a>
+                <p>© <span itemprop="copyrightYear">2021</span> Hi, 墨白.由
+                    <a href="https://github.com/TheBreezeOverflows/boki" target="_blank"  style="color: #555;text-decoration:none;  " rel="nofollow">TheBreezeOverflows</a>
                     制作.</p>
-                <p>Crafted with <i class="fas fa-heart throb" style="color:#d43f57"></i> by <span class="author"
-                                                                                                  itemprop="copyrightHolder">墨白</span>.
+                <p>Crafted with <i class="fas fa-heart throb" style="color:#d43f57"></i> by <span class="author" itemprop="copyrightHolder">墨白</span>.
+                    <a  href="http://www.beian.miit.gov.cn/"  target="_blank"  style="color: #555;text-decoration:none;" rel="nofollow">湘ICP备2022023542号</a>
                 </p></div>
         </footer>
 
